# log

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  TODO  logger.h  readme.md  vcpkg-configuration.json  vcpkg.json
encrypt/: CMakeLists.txt
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  console_logger.cpp  console_logger.h  factory.h  logger.h  rotating_spd_logger.cpp  rotating_spd_logger.h  spd_logger.cpp  spd_logger.h  sqlite_log_bridge.cpp  sqlite_log_bridge.h
test/: CMakeLists.txt  test_log.cpp
