# cmake_minimum_required(VERSION 3.10)
# project(log_test)

# add_subdirectory(../src ${CMAKE_BINARY_DIR}/src)

# find_package(GTest REQUIRED)
# include(GoogleTest)

# add_executable(log_test test_log.cpp)
# target_link_libraries(log_test log GTest::gtest_main)
# target_include_directories(log_test PRIVATE ../src)
# gtest_discover_tests(log_test)
